# AzSphereThermostat

./: .gitignore  AzSphereThermostat.sln  README.md
AzSphereThermostat/: AzSphereThermostat.vcxproj  AzSphereThermostat.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  DHT11Sensor.c  DHT11Sensor.h  HC-SR04.c  HC-SR04.h  HDC1080.c  HDC1080.h  app_manifest.json  linkedLIst.c  linkedList.h  main.c  msg.c  msg.h  mt3620.c  mt3620.h  mt3620_rdb.h  oled.c  oled.h  schedule.c  schedule.h  sd1306.c  sd1306.h  thermostat.c  thermostat.h
